2011-10-10  Georg-Johann Lay  <avr@gjlay.de>

	PR target/50652
	Backport from Mainline r179737.
	* config/avr/avr-devices.c (avr_mcu_types): Set
	.data_section_start of atmega164a to 0x100.

2011-10-07  Bernd Schmidt  <bernds@codesourcery.com>

 	PR target/49049
 	* config/arm/arm.md (arm_subsi3_insn): Lose the last alternative.

2011-10-06  Jakub Jelinek  <jakub@redhat.com>

	* tree.h (avoid_folding_inline_builtin): New prototype.
	* builtins.c (avoid_folding_inline_builtin): No longer static.
	* gimple-fold.c (gimple_fold_builtin): Give up if
	avoid_folding_inline_builtin returns true.

	PR tree-optimization/49279
	* tree-ssa-structalias.c (find_func_aliases): Don't handle
	CAST_RESTRICT.

2011-10-04  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* longlong.h (smul_ppmm, sdiv_qrnnd): Add underscores to the local
	variables.  Fix second operand of DR.  Swap inputs for sdiv_qrnnd.

2011-10-03  Jakub Jelinek  <jakub@redhat.com>
	    Ian Lance Taylor  <iant@google.com>

	* godump.c (go_output_typedef): Support printing enum values that
	don't fit in a signed HOST_WIDE_INT.

2011-09-30  Jakub Jelinek  <jakub@redhat.com>

	PR inline-asm/50571
	* gimple-fold.c (fold_stmt_1) <case GIMPLE_ASM>: If
	input constraints allow mem and not reg, pass true instead of
	false as second argument to maybe_fold_reference.

2011-09-30  Jakub Jelinek  <jakub@redhat.com>
	    Richard Guenther  <rguenther@suse.de>

	* tree-ssa-alias.c (call_may_clobber_ref_p_1): Fix
	handling of BUILT_IN_STRNCAT.
	(ref_maybe_used_by_call_p_1): Fix handling of BUILT_IN_STRCAT,
	and BUILT_IN_STRNCAT.

2011-09-29  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* graphite-scop-detection.c (make_close_phi_nodes_unique):  New
	forward declaration.
	(remove_duplicate_close_phi): Detect and repair creation of
	duplicate close-phis for a containing loop.

2011-09-26  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/50472
	* tree-ssa-ccp.c (fold_const_aggregate_ref): Do not fold
	volatile references.
